removed all pmd style warninigs, that were legit from the code